--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"build": "nest build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "cross-env NODE_ENV=production nest start",
-		"start:dev": "cross-env NODE_ENV=development nest start --watch",
+		"start:dev": "nest start --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -21,7 +21,7 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
-		"@nestjs/common": "^8.0.0",
+		"@nestjs/common": "^8.2.3",
 		"@nestjs/config": "^1.1.5",
 		"@nestjs/core": "^8.0.0",
 		"@nestjs/platform-express": "^8.0.0",
