--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"author": "Ruslan",
 	"private": true,
-	"license": "MIT",
+	"license": "GPL",
 	"scripts": {
 		"prebuild": "rimraf dist",
 		"build": "nest build",
