--- a/.editorconfig
+++ b/.editorconfig
@@ -4,13 +4,17 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[*.{js}]
+[*.{js, ts}]
 charset = utf-8
 
 [Makefile]
 indent_style = tab
 
 [**.js]
+indent_style = space
+indent_size = 2
+
+[**.ts]
 indent_style = space
 indent_size = 2
 
