--- a/.editorconfig
+++ b/.editorconfig
@@ -6,17 +6,12 @@ insert_final_newline = true
 
 [*.{js, ts}]
 charset = utf-8
+# use 2 space
+indent_style = space
+indent_size = 2
 
 [Makefile]
 indent_style = tab
-
-[**.js]
-indent_style = space
-indent_size = 2
-
-[**.ts]
-indent_style = space
-indent_size = 2
 
 [{package.json,.travis.yml}]
 indent_style = space
