--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "Ruslan",
   "private": true,
-  "license": "GPL",
+  "license": "GPL-2.0-only",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
