--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@nestjs/common": "^8.2.4",
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.2.4",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-express": "^8.2.4",
     "@nestjs/sequelize": "^8.0.0",
     "@nestjs/swagger": "^5.1.5",
+    "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
