--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "server",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
-  "author": "Ruslan",
+  "author": "Ruslan Shvetsov",
   "private": true,
-  "license": "GPL-2.0-only",
+  "license": "GPL-3.0-only",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -60,7 +60,8 @@
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "webpack-cli": "^4.9.1"
   },
   "jest": {
     "moduleFileExtensions": [
