--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-express": "^8.2.4",
     "@nestjs/sequelize": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.1.5",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -38,7 +39,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
     "sequelize": "^6.12.0",
-    "sequelize-typescript": "^2.1.1"
+    "sequelize-typescript": "^2.1.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.6",
